--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -2,7 +2,7 @@
   "parser": "@typescript-eslint/parser",
   "extends": ["eslint:recommended", "prettier"],
   "plugins": ["@typescript-eslint", "import", "unused-imports"],
-  "ignorePatterns": ["node_modules"],
+  "ignorePatterns": ["node_modules", "tests"],
   "rules": {
     "@typescript-eslint/no-unused-vars": "off",
     "unused-imports/no-unused-imports": "warn",
