--- a/src/package.json
+++ b/src/package.json
@@ -2,6 +2,7 @@
   "name": "notification",
   "version": "1.0.0",
   "scripts": {
+    "test": "jest",
     "eslint": "eslint --ext .ts ./",
     "prettier": "prettier ./ --check",
     "lint": "yarn prettier && yarn eslint",
@@ -12,22 +13,31 @@
     "@aws-sdk/client-dynamodb": "^3.427.0",
     "@aws-sdk/lib-dynamodb": "^3.427.0",
     "axios": "^1.5.1",
-    "date-fns": "^2.30.0",
     "esbuild": "^0.19.4",
     "humps": "^2.0.1",
+    "luxon": "^3.4.3",
     "rss-parser": "^3.13.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.0",
+    "@babel/preset-env": "^7.22.20",
+    "@babel/preset-typescript": "^7.23.0",
+    "@jest/globals": "^29.7.0",
     "@types/aws-lambda": "^8.10.124",
     "@types/humps": "^2.0.4",
+    "@types/jest": "^29.5.5",
+    "@types/luxon": "^3.3.2",
     "@types/node": "^20.8.2",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-unused-imports": "^3.0.0",
+    "jest": "^29.7.0",
     "prettier": "^3.0.3",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
   }
 }
